# devcade-api

./: Cargo.toml  Dockerfile  Dockerfile.local  Dockerfile.test  README.md  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  upload.js
TESTING/: Dockerfile.minio  create_bucket.py  create_db.sql  run_local.sh  run_tests.sh
TESTING/.minio.sys/: format.json
TESTING/data/AAAAAAAA-AAAA-AAAA-AAAA-AAAAAAAAAAAA/: banner  icon
TESTING/data/BBBBBBBB-BBBB-BBBB-BBBB-BBBBBBBBBBBB/: banner  icon
TESTING/data/CCCCCCCC-CCCC-CCCC-CCCC-CCCCCCCCCCCC/: banner  icon
TESTING/data/DDDDDDDD-DDDD-DDDD-DDDD-DDDDDDDDDDDD/: banner  icon
TESTING/data/EEEEEEEE-EEEE-EEEE-EEEE-EEEEEEEEEEEE/: banner  icon
TESTING/data/FFFFFFFF-FFFF-FFFF-FFFF-FFFFFFFFFFFF/: banner  icon
TESTING/data/GGGGGGGG-GGGG-GGGG-GGGG-GGGGGGGGGGGG/: banner  icon
TESTING/data/HHHHHHHH-HHHH-HHHH-HHHH-HHHHHHHHHHHH/: banner  icon
TESTING/data/IIIIIIII-IIII-IIII-IIII-IIIIIIIIIIII/: banner  icon
TESTING/data/JJJJJJJJ-JJJJ-JJJJ-JJJJ-JJJJJJJJJJJJ/: banner  icon
TESTING/data/KKKKKKKK-KKKK-KKKK-KKKK-KKKKKKKKKKKK/: banner  icon
TESTING/data/LLLLLLLL-LLLL-LLLL-LLLL-LLLLLLLLLLLL/: banner  icon
TESTING/data/MMMMMMMM-MMMM-MMMM-MMMM-MMMMMMMMMMMM/: banner  icon
controllers/: games.js
src/: app.rs  games.rs  lib.rs  main.rs  models.rs  security.rs  tags.rs  tests.rs
src/games/: routes.rs  tests.rs
src/tags/: routes.rs  tests.rs
src/users/: mod.rs  routes.rs  tests.rs
utils/: devcadeS3Actions.js  s3utils.js
(+27 files in other folders)
