[package]
name = "devcade-api-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-smithy-http = { version = "0.54.4", features = ["rt-tokio"] }
chrono = { version = "0.4.24", features = ["serde"] }
data-encoding = "2.3.3"
futures = "0.3.27"
lazy_static = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "chrono", "postgres"] }
utoipa = { version = "3.1.2", features = ["actix_extras", "chrono", "debug", "yaml"] }
utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }
uuid = { version = "1.3.0", features = ["v4", "macro-diagnostics", "fast-rng"] }
zip = "0.6.4"
